--- a/passengerclient/build.gradle
+++ b/passengerclient/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.yuriy.passengerclient"
+        applicationId "ua.com.cuteteam.passengerclient"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
