--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ua.com.cuteteam.core" >
+    package="ua.com.cuteteam.core">
+
+    <application>
+        <activity android:name=".MainActivity"></activity>
+    </application>
 
 </manifest>
