--- a/core/build.gradle
+++ b/core/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions:19.0.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.4'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
+    compile 'com.google.firebase:firebase-core:10.0.1'
 
     implementation 'io.leonard:google-polyline-codec:0.0.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
