--- a/core/build.gradle
+++ b/core/build.gradle
@@ -31,6 +31,16 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
+        }
+        unitTests.all{
+            systemProperty 'robolectric.offline', 'true'
+        }
+    }
 }
 
 dependencies {
@@ -60,4 +70,16 @@ dependencies {
 
     implementation 'io.leonard:google-polyline-codec:0.0.2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    //Testing
+    testImplementation "androidx.test.ext:junit-ktx:1.1.1"
+    testImplementation "androidx.test:core-ktx:1.2.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 }
