--- a/driverclient/build.gradle
+++ b/driverclient/build.gradle
@@ -41,9 +41,34 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
+    //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
+    implementation 'com.google.firebase:firebase-functions:19.0.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+
+    implementation 'io.leonard:google-polyline-codec:0.0.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     //material
     implementation 'com.google.android.material:material:1.1.0'
+
+    //Testing
+    testImplementation "androidx.test.ext:junit-ktx:1.1.1"
+    testImplementation "androidx.test:core-ktx:1.2.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    androidTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    implementation 'org.mockito:mockito-android:3.3.3'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.10.10'
+
 
 }
