--- a/driverclient/src/main/AndroidManifest.xml
+++ b/driverclient/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name="ua.com.cuteteam.core.activities.StartActivity">
+        <activity android:name=".activities.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
