--- a/passengerclient/build.gradle
+++ b/passengerclient/build.gradle
@@ -41,7 +41,17 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
+    //Firebase
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
+    implementation 'com.google.firebase:firebase-functions:19.0.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta03'
+    implementation 'com.google.firebase:firebase-core:10.0.1'
+
+    implementation 'io.leonard:google-polyline-codec:0.0.2'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     //material
     implementation 'com.google.android.material:material:1.1.0'
