--- a/core/build.gradle
+++ b/core/build.gradle
@@ -48,6 +48,10 @@ android {
             systemProperty 'robolectric.offline', 'true'
         }
     }
+
+    kapt {
+        generateStubs = true
+    }
 }
 
 dependencies {
@@ -107,4 +111,8 @@ dependencies {
 
     //libphonenumber
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.1'
+
+    //dagger
+    implementation 'com.google.dagger:dagger:2.27'
+    kapt 'com.google.dagger:dagger-compiler:2.27'
 }
