--- a/core/build.gradle
+++ b/core/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation "androidx.fragment:fragment-ktx:1.2.4" //activityViewModels
     implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     //material
     implementation 'com.google.android.material:material:1.1.0'
